modules/gdscript/tests/scripts/parser/errors/variadic_func_rest_with_default.gd
func f(...args = []):
	pass

func test():
	pass
